--- a/style.css
+++ b/style.css
@@ -5,8 +5,55 @@ body {
     background-attachment: fixed;
 }
 
+
 h1{
-    font-family: Lobster;
-    
+    font-family: Lobster; 
+    color: white;
+    text-align: center;
+    font-weight: 400;
+    font-style: normal;
 }
 
+p{
+    color: white;
+    text-align: center;
+}
+
+.buttons{
+    color: white;
+    text-align: center;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 10% auto;
+    max-width: 570px;
+}
+
+.content{
+    background-color:#283e50 ;
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.5;
+}
+
+.rules{
+    background-color: #1fcca4;
+    border-bottom: black solid 1px;
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.rules:hover{
+    background-color: #1cbb96;
+}
+.start{
+    background-color: #0197f6;
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.start:hover{
+    background-color: #0090e9;
+}
