--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ body {
     background-attachment: fixed;
 }
 
+img{
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
 
 h1{
     font-family: Lobster; 
@@ -31,7 +35,7 @@ p{
     margin: 10% auto;
     padding-left: 20%;
     padding-right: 20%;
-    max-width: 570px;
+    max-width: 360px;
 }
 
 .content{
