--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
 }
 
 img{
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 h1{
@@ -32,7 +32,7 @@ p{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 10% auto;
+    margin: 10%;
     padding-left: 20%;
     padding-right: 20%;
     max-width: 360px;
