--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ p{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 10%;
+    margin: 10% auto;
     padding-left: 20%;
     padding-right: 20%;
     max-width: 360px;
